# text2sql

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  skills-lock.json
.husky/: pre-commit
backend/: .dockerignore  .gitignore  .import_linter.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  vulture_whitelist.py
backend/scripts/: check_test_coverage.py
backend/semgrep_rules/object_calisthenics/: max-two-ivars.yaml  no-else.yaml  no-getter-setter.yaml
backend/semgrep_rules/pytest/: test_in_class.yaml
backend/src/: composition_root.py  main.py
backend/src/agent/application/: __init__.py
backend/src/agent/application/ports/: __init__.py  i_agent_orchestrator.py  i_conversation_repository.py  i_language_model_provider.py  i_summarizer.py  i_tool_executor.py  i_tool_kit.py
backend/src/agent/application/use_cases/: __init__.py  handle_chat_message.py  replay_conversation.py
backend/src/agent/domain/: __init__.py  entities.py  value_objects.py
backend/src/agent/exceptions/: __init__.py  closed_conversation_error.py
backend/src/agent/infrastructure/: chat_model.py  deep_agents.py  dynamo_conversation_repository.py  litellm_provider.py  summarizer.py  tool_kit.py
backend/src/agent/infrastructure/fastapi/: router.py
backend/src/agent/infrastructure/tools/: sql_generator.py  viz_selector.py
backend/src/chat/application/: __init__.py
backend/src/chat/application/ports/: __init__.py  i_agent_orchestrator.py  i_conversation_repository.py  i_language_model_provider.py  i_tool_executor.py  i_tool_kit.py
backend/src/chat/application/use_cases/: __init__.py  handle_chat_message.py  replay_conversation.py
backend/src/chat/domain/: __init__.py  entities.py  spec_validation.py  value_objects.py
backend/src/chat/exceptions/: __init__.py  conversation_order_error.py
backend/src/chat/infrastructure/: chat_model.py  deep_agents.py  dynamo_checkpointer.py  dynamo_conversation_repository.py  langgraph_orchestrator.py  litellm_provider.py  summarizer.py  tool_kit.py
backend/src/chat/infrastructure/agent_graph/: agent_state.py  builder.py  edges.py  nodes.py  schemas.py  spec_builder.py  sql_helpers.py
backend/src/chat/infrastructure/fastapi/: router.py
backend/src/chat/infrastructure/tools/: sql_generator.py
backend/src/dashboards/application/: __init__.py
backend/src/dashboards/application/ports/: __init__.py  i_cross_filter_service.py  i_dashboard_repository.py  i_query_executor.py
backend/src/dashboards/application/use_cases/: __init__.py  apply_cross_filter.py  compose_dashboard.py
backend/src/dashboards/domain/: __init__.py  entities.py  value_objects.py
backend/src/dashboards/exceptions/: __init__.py  dashboard_not_found_error.py  self_filter_error.py  tile_not_found_error.py  tile_overlap_error.py
backend/src/dashboards/infrastructure/: dynamo_repository.py  mongo_repository.py
backend/src/dashboards/infrastructure/fastapi/: router.py
backend/src/datasets/application/: __init__.py
backend/src/datasets/application/ports/: __init__.py  i_dataset_repository.py  i_query_engine.py  i_query_registrar.py  i_storage_ingestion.py
backend/src/datasets/application/use_cases/: __init__.py  ingest_file.py  register_s3_dataset.py
backend/src/datasets/domain/: __init__.py  entities.py  value_objects.py
backend/src/datasets/exceptions/: __init__.py  duplicate_dataset_name_error.py
backend/src/datasets/infrastructure/: duckdb_executor.py  dynamo_repository.py  mongo_repository.py  query_executor.py  s3_ingester.py
backend/src/datasets/infrastructure/fastapi/: router.py
backend/src/questions/application/: __init__.py
backend/src/questions/application/ports/: __init__.py  i_dataset_existence.py  i_query_executor.py  i_question_repository.py  i_viz_spec_builder.py
backend/src/questions/domain/: __init__.py  entities.py  value_objects.py
backend/src/questions/exceptions/: __init__.py  dataset_not_found_error.py  duplicate_question_error.py  incompatible_questions_error.py  question_not_found_error.py  same_visualization_error.py
backend/src/questions/infrastructure/: dynamo_repository.py  mongo_repository.py
backend/src/shared/domain/: __init__.py  base.py
backend/src/shared/infrastructure/: console_notifier.py  duckdb_pool.py  dynamo_models.py  logging.py  mongo_client.py  query_executor_adapter.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/integration/dynamo/: conftest.py  test_dashboards.py  test_datasets.py  test_questions.py
backend/tests/unit/: test_main.py
(+344 files in other folders)
