[project]
name = "text2sql-backend"
version = "0.1.0"
description = "Generative Business Intelligence Chat Tool - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "litellm==1.87.1",
    "langchain-litellm==0.6.6",
    "langchain-core==1.4.0",
    "langgraph==1.2.4",
    "duckdb==1.5.3",
    "pynamodb==6.0.2",
    "pydantic==2.13.4",
    "sse-starlette==3.4.4",
]

[project.optional-dependencies]
s3 = ["boto3==1.43.23"]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-bdd==8.1.0",
    "ruff==0.15.16",
    "semgrep==1.165.0",
    "deptry==0.25.1",
    "vulture==2.16",
    "radon==6.0.1",
    "import-linter==2.11",
    "mutmut==3.5.0",
    "moto[dynamodb]==5.1.4",
    "pre-commit==4.2.0",
    "pyright==1.1.400",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    # Pyflakes errors
    "F",
    # Pycodestyle
    "E", "W",
    # Isort
    "I",
    # Pep8-naming — rule 6: don't abbreviate (enforced via naming conventions)
    "N",
    # Flake8-return — rule 2: no ELSE (else after return/raise/continue/break)
    "RET",
    # Flake8-comprehensions
    "C4",
    # Flake8-simplify
    "SIM",
    # Pylint — complexity gates (rules 1: single indent, 7: small entities)
    "PLR0904",   # too-many-public-methods (max 5)
    "PLR0911",   # too-many-return-statements (max 3)
    "PLR0912",   # too-many-branches (max 6)
    "PLR0913",   # too-many-arguments (max 3)
    "PLR0915",   # too-many-statements (max 30)
    "PLC",       # pylint convention
    "PLE",       # pylint error
    "PLW",       # pylint warning
    # Flake8-builtins — no shadowing builtins
    "A",
    # Flake8-commas
    "COM",
    # Flake8-tidy-imports
    "TID",
    # Flake8-debugger
    "T10",
    # Pyupgrade
    "UP",
    # Flake8-errmsg
    "EM",
    # Flake8-logging-format
    "G",
    # Flake8-bandit (security)
    "S",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]
"tests/*" = ["S101", "S106", "PLR", "RET", "E501", "EM101", "PLC0415"]
"src/*/infrastructure/*" = ["S101"]
"src/*/infrastructure/fastapi/*" = ["S101"]
"src/main.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"

# ── Complexity thresholds (Object Calisthenics rules 1, 7) ──
[tool.ruff.lint.pylint]
max-args = 3          # wrap primitives → fewer params
max-branches = 6      # one level of indentation → few branches
max-returns = 3       # early returns OK, but keep limited
max-statements = 30   # small methods/classes
max-public-methods = 5 # small classes (rule 7)

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
# _underscore attributes are used cross-class by design (OOP encapsulation via naming convention, not enforcement)
reportPrivateUsage = false
# pynamodb ORM's Meta inner class doesn't match pyright's structural expectations
reportIncompatibleVariableOverride = false
# FastAPI route functions are registered via decorators, not called directly
reportUnusedFunction = false
# Third-party libraries (litellm, pynamodb) ship without complete type stubs;
# suppressing Unknown-propagation rules keeps strict coverage for owned code
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
# pynamodb generates DoesNotExist dynamically — no valid type annotation possible
reportGeneralTypeIssues = false
# langgraph.prebuilt.create_react_agent type stubs incorrectly flag it as deprecated;
# it remains the correct public API in langgraph 1.x (pinned to 1.2.4)
reportDeprecated = false

[tool.mutmut]
paths_to_mutate = "src/"
test_command = "pytest tests/ -x"
runner = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short -ra --no-header"
pythonpath = ["."]

[tool.deptry]
# CLI-only and runtime deps not imported directly in Python source.
per_rule_ignores = { DEP002 = [
    "uvicorn", "pydantic", "sse-starlette", "boto3",
    "pytest", "pytest-asyncio", "pytest-cov", "pytest-bdd",
    "ruff", "semgrep", "deptry", "vulture", "radon",
    "import-linter", "mutmut", "pre-commit",
] }

[tool.uv]

[build-system]
requires = ["setuptools==75.0.0"]
build-backend = "setuptools.build_meta"
